--- a/exam/app/views/layouts/application.html.erb
+++ b/exam/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
     <%= yield %>
     <div class="navbar">
   <a href="#root">Home</a>
-  <a href="/customer/sign_in">Sign in</a>
-  <a href="/customers">Register</a>
+  <a href="/customers/sign_in">Sign in</a>
+  <a href="/customers/sign_up">Register</a>
 </div>
 
 
