--- a/exam/app/views/pizzas/show.html.erb
+++ b/exam/app/views/pizzas/show.html.erb
@@ -12,3 +12,4 @@
 
 <%= link_to 'Edit', edit_pizza_path(@pizza) %> |
 <%= link_to 'Back', pizzas_path %>
+<td> <%= button_to "Add pizza to cart", {:controller => "orders", :action =>"create", :customer_id => current_customer.try(:id), :pizza_id => @pizza.id, :delivery_id => 1, :method => :"post"} %> </td>
