--- a/exam/app/views/pizzas/index.html.erb
+++ b/exam/app/views/pizzas/index.html.erb
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <head>
 <style>
-abcd {
-    width: 300px;
-    margin: auto;
-    border: 1px solid red;
-}
+.column {
+    float: left;
+    width: 50%;
+    padding: 10px;
+    height: 300px; 
+
 </style>
  </head>
 
@@ -14,7 +15,14 @@ abcd {
 
 <h1>Pizzas</h1>
 
-<table>
+
+
+  <div class="row">
+  
+    <% @pizzas.each do |pizza| %>
+    <div  class="row">
+    <div class="column">
+    <table>
   <thead>
     <tr>
       <th>Crust</th>
@@ -22,10 +30,6 @@ abcd {
       <th colspan="3"></th>
     </tr>
   </thead>
-
-  <tbody>
-    <% @pizzas.each do |pizza| %>
-    <div  class="abcd">
       <tr>
         <td><%= pizza.crust_id %></td>
         <td><%= pizza.recipe_id %></td>
@@ -33,9 +37,12 @@ abcd {
         <td><%= link_to 'Edit', edit_pizza_path(pizza) %></td>
         <td><%= link_to 'Destroy', pizza, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
+      </div>
     <% end %>
+    
     </div>
-  </tbody>
+    </div>
+  
 </table>
 
 <br>
