--- a/exam/app/views/pizzas/show.html.erb
+++ b/exam/app/views/pizzas/show.html.erb
@@ -12,4 +12,9 @@
 
 <%= link_to 'Edit', edit_pizza_path(@pizza) %> |
 <%= link_to 'Back', pizzas_path %>
-<td> <%= button_to "Add pizza to cart", {:controller => "orders", :action =>"create", :customer_id => current_customer.try(:id), :pizza_id => @pizza.id, :delivery_id => 1, :method => :"post"} %> </td>
+<%= form_tag(controller: 'orders', action: 'create', method: 'post') do %>
+<%= hidden_field_tag :customer_id, current_customer.try(:id) %>
+<%= hidden_field_tag :pizza_id, @pizza.id %>
+<%= number_field_tag :delivery_id %>
+<%= submit_tag "Add to cart" %>
+<% end %>
